# pyspi

./: .gitattributes  .gitignore  .travis.yml  LICENSE  MANIFEST.in  README.md  codecov.yaml  paper.bib  paper.md  requirements.txt  setup.cfg  setup.py
.github/workflows/: build_and_test.yml  docs.yml  docs2.yml  paper.yml  pip_install.yml  publish_pypi.yml  tests.yml
ci/: environment.yml
docs/: Makefile  conf.py  index.rst  make.bat  requirements.txt
docs/api/: modules.rst
docs/md_docs/: access_data.md  active_detectors.md  contributing.md  grb_analysis.md  installation.md  psd.md  psd_eff.md  response.md  time_series.md
examples/: SPIframe prototype.ipynb  Untitled1.ipynb  convsky_model_SPI_GRB110903A.fits  misalignment_test.ipynb  psi_plotting.ipynb  pyspi_tutorial.ipynb  sip_data_proto.ipynb  spa_frame_demo.ipynb
io/: catalog.py
pyspi/: Config_Builder.py  SPILike.py  SPILike_general.py  SPILike_test.py  SPIResponse.py  SPI_DRM.py  Untitled.ipynb  __init__.py  _version.py  background_model.py  config_builder.py  data_constant_sources.py  plot_effective_area.py  plot_irfs.py  spi_analysis.py  spi_background.py  spi_constantsource_analysis.py  spi_data.py  spi_data_grb_synth.py  spi_display.py  spi_frame.py  spi_grb_analysis.py  spi_grb_analysis_photopeak.py  spi_pointing.py  spi_response.py  spi_response_photopeak.py  test_get_eefective_area.py  test_poin.py  test_ptg.ipynb  test_pyspi.py  time_series_builder.py
pyspi/background/: background_model.py
pyspi/config/: config_builder.py
pyspi/data/: back_model.fits  convsky_model_SPI_GRB110903A_gamma2.fits  inst_misalign_20050328.fits  roland.html  spi_grb_background.fits
pyspi/io/: __init__.py  array_to_cmap.py  catalog.py  file_utils.py  get_files.py  package_data.py
pyspi/simulate/: simulate_data_file.py
(+49 files in other folders)
