[metadata]
name = pyspi
description = A python analysis framework for INTEGRAL-SPI
long_description = file:README.md
long_description_content_type = text/markdown
url = https://github.com/grburgess/pyspi
author_email = 
author = Bear Biltzinger
requires_python = >=3.7.0
license = GPL-3+

classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: POSIX
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering :: Physics

project_urls =
    Bug Tracker = https://github.com/BjoernBiltzinger/pyspi/issues
    Source Code = https://github.com/BjoernBiltzinger/pyspi


[options]
packages = find:
install_requires =
    numpy
    numba
    matplotlib
    h5py
    pandas
    ipython
    astropy
    extension-helpers
    scipy
    configya
    astromodels
    threeml
    interpolation


tests_require =
    pytest
    pytest-codecov
    hypothesis

[tool:pytest]
# Options for py.test:
# Specify command line options as you would do when invoking py.test directly.
# e.g. --cov-report html (or xml) for html/xml output or --junitxml junit.xml
# in order to write a coverage file that can be read by Jenkins.
addopts = --color=yes --cov=pyspi --cov-report=term -ra --ignore=pyspi/test --ignore=pyspi/_version.py
log_cli = 1
log_cli_level = INFO
testpaths = pyspi/test 
norecursedirs = pyspi/test


[versioneer]
VCS=git
style=pep440
versionfile_source=pyspi/_version.py
versionfile_build=pyspi/_version.py
tag_prefix=v
parentdir_prefix=pyspi-
